--- a/src/filefinder/package.json
+++ b/src/filefinder/package.json
@@ -27,7 +27,7 @@
     "react-dropzone": "^14.2.2",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-switch": "^7.0.0",
     "router-dom": "^2.2.9",
     "web-vitals": "^2.1.4"
