added google cloud settings

--- a/src/dev.env
+++ b/src/dev.env
@@ -35,3 +35,7 @@ DPR_API_BASE=http://localhost/api
 #UBIDOTS
 UBIDOTS_DATASOURCES_URL=https://iot.seeinsights.com/api/v1.6/datasources
 UBIDOTS_API_KEY=BBFF-1IJNxMPRiNoNvccDiaTJNbaN7adnb4
+
+#GOOGLE CLOUD
+GOOGLE_CLOUD_PROJECT = ringed-marker-378116
+GOOGLE_APPLICATION_CREDENTIALS = /secrets/gcloud_keyfile.json
