--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -1,6 +1,20 @@
 steps:
-  # running docker-compose
-  - name: 'docker/compose:1.26.2'
+  # Install dependencies.
+  - name: 'gcr.io/cloud-builders/npm'
+    args: ['install']
+
+
+  # Build the new docker image.
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/gcb-docker-compose:latest', '.']
+
+  # Run the app and dependencies in the background using docker-compose.
+  # Warning: this won't be cleaned up, which might be an issue if you run it
+  # with the local builder.
+  - name: 'docker/compose:1.15.0'
     args: ['up', '-d']
+    env:
+      - 'PROJECT_ID=$PROJECT_ID'
+
 options:
   logging: CLOUD_LOGGING_ONLY
