messing with cloudbuild.yaml

--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -1,9 +1,6 @@
 steps:
-
-  # Run the app and dependencies in the background using docker-compose.
-  # Warning: this won't be cleaned up, which might be an issue if you run it
-  # with the local builder.
-  - name: 'docker/compose:1.15.0'
+  # running docker-compose
+  - name: 'docker/compose:1.26.2'
     args: ['up', '-d']
     env:
       - 'PROJECT_ID=$PROJECT_ID'
