--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -4,7 +4,9 @@ steps:
     args: ['up', '-d']
     env:
       - 'PROJECT_ID=$PROJECT_ID'
-
+# Build the new docker image.
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/gcb-docker-compose:latest', '.']
 # Push the new image to the registry.
 images: ['gcr.io/$PROJECT_ID/gcb-docker-compose:latest']
 
