--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -1,3 +1,5 @@
+steps:
+
 # Build the new docker image.
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'us-west2-docker.pkg.dev/ringed-marker-378116/google-cloud-sandbox-repo/latest', '.']
