messing with cloudbuild.yaml

--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -1,4 +1,7 @@
 steps:
+  - name: 'docker/compose'
+    id: 'compose-up'
+    args: [ '-f', 'docker-compose.yml', 'up', '-d' ]
 
 # Build the new docker image.
   - name: 'gcr.io/cloud-builders/docker'
@@ -7,6 +10,7 @@ steps:
 # Push the new image to the registry.
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', '-t', 'us-west2-docker.pkg.dev/ringed-marker-378116/google-cloud-sandbox-repo/latest', '.']
+
 images: ['us-west2-docker.pkg.dev/ringed-marker-378116/google-cloud-sandbox-repo/latest']
 
 options:
