--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -4,13 +4,13 @@ steps:
     id: 'compose-up'
     args: [ '-f', 'src/docker-compose.yml', 'up', '-d' ]
 
-# Build the new docker image in the Artifact Registry.
+# Build the new docker image.
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'us-west2-docker.pkg.dev/ringed-marker-378116/google-cloud-sandbox-repo/latest', '.']
+    args: ['build', '-t', 'us-west2-docker.pkg.dev/ringed-marker-378116/google-cloud-sandbox-repo:latest', '.']
 
 # Push the new image to the Artifact Registry.
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', '-t', 'us-west2-docker.pkg.dev/ringed-marker-378116/google-cloud-sandbox-repo/latest', '.']
+    args: ['push', '-t', 'us-west2-docker.pkg.dev/ringed-marker-378116/google-cloud-sandbox-repo:latest', '.']
 
 images: ['us-west2-docker.pkg.dev/ringed-marker-378116/google-cloud-sandbox-repo/latest']
 
