--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -6,13 +6,13 @@ steps:
 
 # Build the new docker image.
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'us-west2-docker.pkg.dev/ringed-marker-378116/google-cloud-sandbox-repo/google-cloud-sandbox-image:latest', '.']
+    args: ['build', '-t', 'us-west2-docker.pkg.dev/ringed-marker-378116/google-cloud-sandbox-repo/google-cloud-sandbox-image', '.']
 
 # Push the new image to the Artifact Registry.
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', '-t', 'us-west2-docker.pkg.dev/ringed-marker-378116/google-cloud-sandbox-repo/google-cloud-sandbox-image:latest', '.']
+    args: ['push', '-t', 'us-west2-docker.pkg.dev/ringed-marker-378116/google-cloud-sandbox-repo/google-cloud-sandbox-image', '.']
 
-images: ['us-west2-docker.pkg.dev/ringed-marker-378116/google-cloud-sandbox-repo/google-cloud-sandbox-image:latest']
+images: ['us-west2-docker.pkg.dev/ringed-marker-378116/google-cloud-sandbox-repo/google-cloud-sandbox-image']
 
 options:
   logging: CLOUD_LOGGING_ONLY
