--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -8,9 +8,9 @@ steps:
       'up', '--build', '-d']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['tag', 'google-cloud-sandbox-image', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/google-cloud-sandbox-image']
+    args: ['tag', 'google-cloud-sandbox-image', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/google-cloud-sandbox-image', '.']
 
-images: ['us-west2-docker.pkg.dev/$PROJECT_ID/google-cloud-sandbox-repo/google-cloud-sandbox-image']
+images: ['us-west2-docker.pkg.dev/$PROJECT_ID/google-cloud-sandbox-repo/google-cloud-sandbox-image', '.']
 
 options:
   logging: CLOUD_LOGGING_ONLY
