--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -5,55 +5,55 @@ steps:
   - name: 'docker/compose'
     id: 'compose-up'
     args: [
-      '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo', '.'
+      '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo',
       '-f', 'src/docker-compose.yml',
       'up', '--build', 'nginx']
 
   - name: 'docker/compose'
     id: 'compose-up'
     args: [
-      '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo', '.'
+      '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo',
       '-f', 'src/docker-compose.yml',
       'up', '--build', 'mariadb' ]
 
   - name: 'docker/compose'
     id: 'compose-up'
     args: [
-      '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo', '.'
+      '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo',
       '-f', 'src/docker-compose.yml',
       'up', '--build', 'api' ]
 
   - name: 'docker/compose'
     id: 'compose-up'
     args: [
-      '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo', '.'
+      '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo',
       '-f', 'src/docker-compose.yml',
       'up', '--build', 'filefinder' ]
 
   - name: 'docker/compose'
     id: 'compose-up'
     args: [
-      '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo', '.'
+      '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo',
       '-f', 'src/docker-compose.yml',
       'up', '--build', 'calendar' ]
 
   - name: 'docker/compose'
     id: 'compose-up'
     args: [
-      '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo', '.'
+      '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo',
       '-f', 'src/docker-compose.yml',
       'up', '--build', 'visitation' ]
   - name: 'docker/compose'
     id: 'compose-up'
     args: [
-      '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo', '.'
+      '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo',
       '-f', 'src/docker-compose.yml',
       'up', '--build', 'legacy' ]
 
   - name: 'docker/compose'
     id: 'compose-up'
     args: [
-      '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo', '.'
+      '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo',
       '-f', 'src/docker-compose.yml',
       'up', '--build', 'phpmyadmin' ]
 
