--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -8,7 +8,7 @@ steps:
       '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo',
       '-f', 'src/docker-compose.yml',
       'up', '--build', 'nginx', 'mariadb', 'api', 'filefinder', 'calendar',
-      'visitation', 'legacy', 'phpmyadmin']
+      'visitation', 'legacy', 'phpmyadmin', '-d']
 
 # Tag images
 # ____________________________________________________________________________________
