--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -7,8 +7,9 @@ steps:
     args: [
       '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo',
       '-f', 'src/docker-compose.yml',
-      'up', '--build', '-d', 'nginx', 'mariadb', 'api', 'filefinder', 'calendar',
-      'visitation', 'legacy', 'phpmyadmin']
+      'up', '--build', '-d', 'nginx', 'mariadb', 'legacy'
+      # , 'api', 'filefinder', 'calendar', 'visitation',  'phpmyadmin'
+    ]
 
 # Tag images
 # ____________________________________________________________________________________
@@ -17,55 +18,55 @@ steps:
     args: [
       'tag',
       'nginx',
-      'us-central1-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/nginx'
+      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/nginx'
     ]
 
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'tag',
       'mariadb:10.6',
-      'us-central1-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/mariadb:10.6'
+      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/mariadb:10.6'
     ]
 
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'tag',
       'api',
-      'us-central1-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/api'
+      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/api'
     ]
 
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'build', '-f', 'src/legacy_application/Dockerfile',
-      '-t', 'us-central1-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/legacy'
+      '-t', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/legacy'
     ]
 
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'tag',
       'calendar',
-      'us-central1-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/calendar'
+      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/calendar'
     ]
 
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'tag',
       'visitation',
-      'us-central1-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/visitation'
+      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/visitation'
     ]
 
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'tag',
       'legacy',
-      'us-central1-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/legacy'
+      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/legacy'
     ]
 
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'tag',
       'phpmyadmin:5.0',
-      'us-central1-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/phpmyadmin:5.0'
+      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/phpmyadmin:5.0'
     ]
 
 images: ['us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/nginx',
