--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -7,8 +7,8 @@ steps:
     args: [
       '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo',
       '-f', 'src/docker-compose.yml',
-      'up', '--build', '-d', 'nginx', 'mariadb', 'legacy'
-      # , 'api', 'filefinder', 'calendar', 'visitation',  'phpmyadmin'
+      'up', '--build', '-d', 'nginx', 'mariadb', 'legacy', 'api',
+      'filefinder', 'calendar', 'visitation',  'phpmyadmin'
     ]
 
 # Tag images
