--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -31,8 +31,8 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'tag',
-      'api:$COMMIT_SHA',
-      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/api:$COMMIT_SHA'
+      'api',
+      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/api'
     ]
 
 #  - name: 'gcr.io/cloud-builders/docker'
