--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -7,28 +7,27 @@ steps:
     args: [
       '-p', 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo',
       '-f', 'src/docker-compose.yml',
-      'up', '--build', '-d', 'nginx', 'mariadb', 'legacy', 'api',
-      # 'filefinder', 'calendar', 'visitation',
-      'phpmyadmin'
+      'up', '--build', '-d', 'nginx', 'mariadb', 'legacy',
+      # 'api', 'filefinder', 'calendar', 'visitation',  'phpmyadmin'
     ]
 
 # Tag images
 # ____________________________________________________________________________________
 
-#  - name: 'gcr.io/cloud-builders/docker'
-#    args: [
-#      'tag',
-#      'nginx',
-#      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/nginx'
-#    ]
-#
-#  - name: 'gcr.io/cloud-builders/docker'
-#    args: [
-#      'tag',
-#      'mariadb:10.6',
-#      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/mariadb:10.6'
-#    ]
-#
+  - name: 'gcr.io/cloud-builders/docker'
+    args: [
+      'tag',
+      'nginx',
+      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/nginx'
+    ]
+
+  - name: 'gcr.io/cloud-builders/docker'
+    args: [
+      'tag',
+      'mariadb:10.6',
+      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/mariadb:10.6'
+    ]
+
 #  - name: 'gcr.io/cloud-builders/docker'
 #    args: [
 #      'tag',
@@ -40,30 +39,30 @@ steps:
 #    args: [
 #      'tag',
 #      'filefinder',
-#      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/filefinder:$COMMIT_SHA'
+#      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/filefinder'
 #    ]
 #
 #  - name: 'gcr.io/cloud-builders/docker'
 #    args: [
 #      'tag',
 #      'calendar',
-#      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/calendar:$COMMIT_SHA'
+#      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/calendar'
 #    ]
 #
 #  - name: 'gcr.io/cloud-builders/docker'
 #    args: [
 #      'tag',
 #      'visitation',
-#      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/visitation:$COMMIT_SHA'
+#      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/visitation'
 #    ]
-#
-#  - name: 'gcr.io/cloud-builders/docker'
-#    args: [
-#      'tag',
-#      'legacy',
-#      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/legacy:$COMMIT_SHA'
-#    ]
-#
+
+  - name: 'gcr.io/cloud-builders/docker'
+    args: [
+      'tag',
+      'legacy',
+      'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/legacy'
+    ]
+
 #  - name: 'gcr.io/cloud-builders/docker'
 #    args: [
 #      'tag',
@@ -73,12 +72,12 @@ steps:
 
 images: ['us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/nginx',
          'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/mariadb',
-         'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/api',
+         #'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/api',
          #'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/filefinder',
          #'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/calendar',
         # 'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/visitation',
          'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/legacy',
-         'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/phpmyadmin'
+#         'us-west2-docker.pkg.dev/${PROJECT_ID}/google-cloud-sandbox-repo/phpmyadmin'
         ]
 
 options:
