--- a/src/legacy_application/config/apache2.conf
+++ b/src/legacy_application/config/apache2.conf
@@ -157,19 +157,20 @@ Include ports.conf
 # your system is serving content from a sub-directory in /srv you must allow
 # access here, or in any related virtual host.
 <Directory />
-        Options FollowSymLinks
-        AllowOverride None
-        Require all denied
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Require all granted
 </Directory>
 
 <Directory /usr/share>
-        AllowOverride None
+        Options Indexes FollowSymLinks
+        AllowOverride All
         Require all granted
 </Directory>
 
 <Directory ${APACHE_DOCUMENT_ROOT}>
         Options Indexes FollowSymLinks
-        AllowOverride None
+        AllowOverride All
         Require all granted
 </Directory>
 
