--- a/src/legacy_application/config/apache2.conf
+++ b/src/legacy_application/config/apache2.conf
@@ -157,20 +157,19 @@ Include ports.conf
 # your system is serving content from a sub-directory in /srv you must allow
 # access here, or in any related virtual host.
 <Directory />
-        Options Indexes FollowSymLinks
-        AllowOverride All
-        Require all granted
+        Options FollowSymLinks
+        AllowOverride None
+        Require all denied
 </Directory>
 
 <Directory /usr/share>
-        Options Indexes FollowSymLinks
-        AllowOverride All
+        AllowOverride None
         Require all granted
 </Directory>
 
 <Directory ${APACHE_DOCUMENT_ROOT}>
         Options Indexes FollowSymLinks
-        AllowOverride All
+        AllowOverride None
         Require all granted
 </Directory>
 
